# claude-plugins-hyped

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: secret-scan.yml
mcp/chrome-tool/: daemon.ts  handoff.test.ts  handoff.ts  recording.test.ts  recording.ts  sessions.test.ts  tools.test.ts  tools.ts  types.ts
mcp/hyped-cron/: jobs.ts  schedule.test.ts  schedule.ts  server.ts  tools.test.ts  tools.ts  workspace.test.ts  workspace.ts
mcp/hyped-workspace/: package.json  server.ts  tools.test.ts  tools.ts
mcp/incognito-browser/: index.test.ts  index.ts  package.json  session.ts  tools.ts
mcp/local-tts/: pyproject.toml
mcp/local-tts/local_tts_mcp/: server.py
mcp/local-tts/qwen_tts_mcp/: server.py
mcp/local-tts/tests/: test_server.py
mcp/local-tunnel/: package.json  server.ts  tunnel.test.ts  tunnel.ts
mcp/user-browser/: chrome.ts  client.ts  daemon.ts  handoff.ts  index.ts  package.json  profiles.test.ts  profiles.ts  sessions.ts  test-handoff-e2e.ts  tools.test.ts  tools.ts  types.ts
plugins/hyped/: .mcp.json  CLAUDE.md  README.md
plugins/hyped/mcp/local-tts/: pyproject.toml
plugins/hyped/mcp/local-tts/tests/: test_server.py
skills/agent-browser/: SKILL.md
skills/chrome-bridge/: SKILL.md
skills/heartbeat/: SKILL.md
skills/hyped-cron/: SKILL.md
skills/hyped-cron-onboarding/: SKILL.md
skills/incognito-browser/: SKILL.md
skills/linkedin-account-manager-agent/: SKILL.md
skills/local-ui/: SKILL.md
skills/restart-daemon/: SKILL.md
skills/set-workspace/: SKILL.md
(+44 files in other folders)
