[project]
name = "qwen-tts-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0", "mlx-audio"]

[project.scripts]
qwen-tts-mcp = "qwen_tts_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen_tts_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
